--- a/src/main/resources/templates/fragments/modals/addSaysModal.html
+++ b/src/main/resources/templates/fragments/modals/addSaysModal.html
@@ -1,16 +1,14 @@
 <div class="modal fade" id="addSaysModal" tabindex="-1" role="dialog" data-backdrop="false"
      aria-labelledby="addSaysModalTitle" aria-hidden="true" xmlns:th="http://www.thymeleaf.org">
     <div class="modal-dialog" role="document">
-        <form class="modal-content" onsubmit="return validateSaysForm()"
-              th:action="@{/project/{pid}/addSays(pid=${project.getId()})}"
-              action="#" method="POST">
+        <form class="modal-content" onsubmit="return validateSaysForm()" id="formAddSays"
+              th:action="@{/project/{pid}/addSays(pid=${project.getId()})}" action="#" method="POST">
             <div class="modal-header">
                 <h5 class="modal-title" id="addMemberModalTitle">Τι είπε: Νέα σημείωση</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-
             <div class="modal-body">
                 <div class="position-relative form-group">
                     <label for="descriptionSays" class="">Περιγραφή</label>
@@ -25,8 +23,6 @@
                                 th:text="${category.getName()}">
                         </option>
                     </select>
-<!--                    <em id="typeError" class="error" th:if="${#fields.hasErrors('category')}">-->
-<!--                        extreme user category ERROR</em>-->
                 </div>
             </div>
             <div class="modal-footer">
@@ -37,10 +33,10 @@
     </div>
     <script>
         function validateSaysForm() {
-            var descr = document.getElementById("descriptionSays").innerHTML;
-            var category = document.getElementById("categorySays").value;
+            var descr = document.forms.namedItem("formAddSays").elements.namedItem("descriptionSays").value;
+            var category = document.forms.namedItem("formAddSays").elements.namedItem("categorySays").value;
             if(descr == "") {
-                alert("Πρέπει να συμπληρώσετε το πεδίο Περιγραφή: "+descr);
+                alert("Πρέπει να συμπληρώσετε το πεδίο Περιγραφή");
                 return false;
             }
             else if(category.trim() == "") {
