--- a/src/main/resources/templates/fragments/modals/addThinksModal.html
+++ b/src/main/resources/templates/fragments/modals/addThinksModal.html
@@ -1,7 +1,7 @@
 <div class="modal fade" id="addThinksModal" tabindex="-1" role="dialog" data-backdrop="false"
      aria-labelledby="addThinksModalTitle" aria-hidden="true" xmlns:th="http://www.thymeleaf.org">
     <div class="modal-dialog" role="document">
-        <form class="modal-content" onsubmit="return validateThinksForm()"
+        <form class="modal-content" onsubmit="return validateThinksForm()" id="formAddThinks"
               th:action="@{/project/{pid}/addThinks(pid=${project.getId()})}"
               action="#" method="POST">
             <div class="modal-header">
@@ -10,7 +10,6 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-
             <div class="modal-body">
                 <div class="position-relative form-group">
                     <label for="descriptionThink" class="">Περιγραφή</label>
@@ -25,8 +24,6 @@
                                 th:text="${category.getName()}">
                         </option>
                     </select>
-<!--                    <em id="typeError" class="error" th:if="${#fields.hasErrors('category')}">-->
-<!--                        extreme user category ERROR</em>-->
                 </div>
             </div>
             <div class="modal-footer">
@@ -37,10 +34,10 @@
     </div>
     <script>
         function validateThinksForm() {
-            var descr = document.getElementById("descriptionThink").innerHTML;
-            var category = document.getElementById("categoryThink").value;
+            var descr = document.forms.namedItem("formAddThinks").elements.namedItem("descriptionThink").value;
+            var category = document.forms.namedItem("formAddThinks").elements.namedItem("categoryThink").value;
             if(descr == "") {
-                alert("Πρέπει να συμπληρώσετε το πεδίο Περιγραφή: "+descr);
+                alert("Πρέπει να συμπληρώσετε το πεδίο Περιγραφή");
                 return false;
             }
             else if(category.trim() == "") {
