Fixed errors with wordcloud generation and file resources upload in linux

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,13 +4,8 @@
             <div class="app-footer-left">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a href="javascript:void(0);" class="nav-link">
-                            Footer Link 1
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="javascript:void(0);" class="nav-link">
-                            Footer Link 2
+                        <a href="https://www.peproe.gr/category/pleropories-28" target="_blank" rel="noopener" class="nav-link">
+                            ΕΠΙΧΕΙΡΗΣΙΑΚΟ ΠΡΟΓΡΑΜΜΑ "ΗΠΕΙΡΟΣ" 2014-2020
                         </a>
                     </li>
                 </ul>
@@ -18,16 +13,21 @@
             <div class="app-footer-right">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a href="javascript:void(0);" class="nav-link">
-                            Footer Link 3
+                        <a href="https://nosis.gr/" target="_blank" rel="noopener" class="nav-link">
+                            ΝΩΣΙΣ
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="javascript:void(0);" class="nav-link">
-                            <div class="badge badge-success mr-1 ml-0">
-                                <small>NEW</small>
-                            </div>
-                            Footer Link 4
+                        <a href="http://www.omegatech.gr/" target="_blank" rel="noopener" class="nav-link">
+                            ΩMEGA Technology
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="https://www.cs.uoi.gr/" target="_blank" rel="noopener" class="nav-link">
+<!--                            <div class="badge badge-success mr-1 ml-0">-->
+<!--                                <small>NEW</small>-->
+<!--                            </div>-->
+                            Τμήμα Μηχανικών Ηλεκτρονικών Υπολογιστών και Πληροφορικής
                         </a>
                     </li>
                 </ul>
