--- a/src/main/resources/templates/fragments/menuUser.html
+++ b/src/main/resources/templates/fragments/menuUser.html
@@ -98,7 +98,7 @@
                         </a>
                     </li>
                     <li>
-                        <a th:href="@{'/newProject'}">
+                        <a th:href="@{'/learningHub'}">
                             <i class="metismenu-icon"></i>Λίστα Υλικού Εκπαίδευσης
                         </a>
                     </li>
