--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -17,7 +17,6 @@
                     </div>
                     <div>User Dashboard
                         <div class="page-title-subheading">Εδώ μπορείτε να βρείτε πληροφορίες για τα project σας (ενεργά και μή)
-                            καθώς και να δείτε εκπαιδευτικά video για τη μεθοδολογία του Design Thinking
                         </div>
                     </div>
                 </div>
@@ -75,11 +74,11 @@
                     <span>Projects</span>
                 </a>
             </li>
-            <li class="nav-item">
-                <a role="tab" class="nav-link" id="tab-2" data-toggle="tab" href="#tab-content-2">
-                    <span>Υλικό Εκπαίδευσης</span>
-                </a>
-            </li>
+<!--            <li class="nav-item">-->
+<!--                <a role="tab" class="nav-link" id="tab-2" data-toggle="tab" href="#tab-content-2">-->
+<!--                    <span>Υλικό Εκπαίδευσης</span>-->
+<!--                </a>-->
+<!--            </li>-->
         </ul>
         <!-- END OF TABS DEFINITION -->
 
