--- a/src/main/resources/templates/project/views/resourcesCollection.html
+++ b/src/main/resources/templates/project/views/resourcesCollection.html
@@ -46,6 +46,7 @@
 <!--        <th:block layout:insert="~{fragments/modals/removeMemberConfirm}"/>-->
         <!-- Complete stage confirmation modal -->
         <th:block layout:insert="~{fragments/modals/nextStageConfirm}"/>
+        <th:block layout:insert="~{fragments/modals/removeProjectResourceConfirm}"/>
     </th:block>
 </th:block>
 </html>
